# Mychat-GPT

./: .apikeysample  .gitignore  Cargo.toml  LICENSE  README.md
config/: .apikeysample
src/: chat.rs  file.rs  lib.rs  main.rs  network.rs
