[package]
name = "mychat-gpt"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.5", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
